<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/drawer1Fragment">

    <!-- Destinos del NavigationView -->
    <fragment
        android:id="@+id/drawer1Fragment"
        android:name="com.example.tarea_navegacion_joseavn.ui.drawer.Drawer1Fragment"
        android:label="@string/menu_drawer_1"
        tools:layout="@layout/fragment_drawer1" />
    <fragment
        android:id="@+id/drawer2Fragment"
        android:name="com.example.tarea_navegacion_joseavn.ui.drawer.Drawer2Fragment"
        android:label="@string/menu_drawer_2"
        tools:layout="@layout/fragment_drawer2" />
    <fragment
        android:id="@+id/drawer3Fragment"
        android:name="com.example.tarea_navegacion_joseavn.ui.drawer.Drawer3Fragment"
        android:label="@string/menu_drawer_3"
        tools:layout="@layout/fragment_drawer3" />

    <!-- Destinos del BottomNavigationView (IDs Corregidos) -->
    <fragment
        android:id="@+id/bottom1Fragment"
        android:name="com.example.tarea_navegacion_joseavn.ui.bottom.Bottom1Fragment"
        android:label="@string/menu_bottom_1"
        tools:layout="@layout/fragment_bottom1" />
    <fragment
        android:id="@+id/bottom2Fragment"
        android:name="com.example.tarea_navegacion_joseavn.ui.bottom.Bottom2Fragment"
        android:label="@string/menu_bottom_2"
        tools:layout="@layout/fragment_bottom2" />
    <fragment
        android:id="@+id/bottom3Fragment"
        android:name="com.example.tarea_navegacion_joseavn.ui.bottom.Bottom3Fragment"
        android:label="@string/menu_bottom_3"
        tools:layout="@layout/fragment_bottom3" />

    <!-- Destinos del OptionsMenu -->
    <fragment
        android:id="@+id/options1Fragment"
        android:name="com.example.tarea_navegacion_joseavn.ui.options.Options1Fragment"
        android:label="@string/menu_options_1"
        tools:layout="@layout/fragment_options1" />
    <fragment
        android:id="@+id/options2Fragment"
        android:name="com.example.tarea_navegacion_joseavn.ui.options.Options2Fragment"
        android:label="@string/menu_options_2"
        tools:layout="@layout/fragment_options2" />
    <fragment
        android:id="@+id/options3Fragment"
        android:name="com.example.tarea_navegacion_joseavn.ui.options.Options3Fragment"
        android:label="@string/menu_options_3"
        tools:layout="@layout/fragment_options3" />

    <!-- Destino del ViewPager/TabLayout -->
    <fragment
        android:id="@+id/tabsHostFragment"
        android:name="com.example.tarea_navegacion_joseavn.ui.tabs.TabsHostFragment"
        android:label="@string/menu_tabs_host"
        tools:layout="@layout/fragment_tabs_host" />

</navigation>